k8s/authelia/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-ui
  namespace: authelia
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
      sectionName: websecure
      kind: Gateway
  hostnames:
    - auth.h3rmt.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
